# MedAtlas

./: .breakpoints  .gitignore  .replit  OIP (81).jfif  README.md  db.sqlite3  h origin main  login.txt  manage.py  old.sqlite3  pyproject.toml  read.md  rede.md  render.yaml  requirements.txt  tash pop
.upm/: store.json
citysearch_project/: settings.py  wsgi.py
media/: download.jfif
mysite/: .env  apps.py  asgi.py  paypal_client.py  settings.py  signals.py  urls.py  utils.py  views.py  wsgi.py
project/: db.sqlite3
sendemail/: forms.py  urls.py  views.py
showcase/: admin.py  api.py  api_urls.py  api_views.py  apps.py  backends.py  feed.py  fields.py  forms.py  middleware.py  models.py  random_nonce.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
templates/: about.html  aboutbackgroundimagechange.html  achievements.html  active-users.html  actualbattle.html  add_question.html  add_review_email_template.html  addamonstrosity.html  addons.html  admin.html  administration.html  administrationchangelog.html  administrativepages.html  administrativeroles.html  administrativetasks.html  answer.html  app.html  ascend.html  ballot.html  banappeals.html  bandone.html  base.html  battle.html  battle_bets.html  battle_detail.html  battlecreator.html  billetbackgroundimagechange.html  billets.html  blackjack.html  blog.html  blog_comment.html  blogbase.html  blogsearch_results.html  businessemail.html  businessmailingsuccess.html  card_list.html  changelog.html  chatbackgroundimagechange.html  checkout.html  chests.html  (+240 more)
user_management/: apps.py
(+697 files in other folders)
